@@ -1,3 +1,11 @@
+2012-05-07  Tobias Burnus  <burnus@net-b.de>
+
+	Backport from mainline:
+	2012-05-07  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/53255
+	* gfortran.dg/typebound_operator_15.f90: New.
+
 2012-05-05  Tobias Burnus  <burnus@net-b.de>
 
 	Backport from mainline:
