@@ -1,3 +1,12 @@
+2012-05-07  Tobias Burnus  <burnus@net-b.de>
+
+	Backport from mainline:
+	2012-05-07  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/53255
+	* resolve.c (resolve_typebound_static): Fix handling
+	of overridden specific to generic operator.
+
 2012-05-05  Tobias Burnus  <burnus@net-b.de>
 
 	Backport from mainline:
